RESOLVED FIXED147981
[GLib] GMainLoopSource should receive the std::function<> objects through rvalue references
https://bugs.webkit.org/show_bug.cgi?id=147981
Summary [GLib] GMainLoopSource should receive the std::function<> objects through rva...
Zan Dobersek
Reported 2015-08-13 10:09:36 PDT
[GLib] GMainLoopSource should receive the std::function<> objects through rvalue references
Attachments
Patch (29.38 KB, patch)
2015-08-13 10:16 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2015-08-13 10:16:25 PDT
WebKit Commit Bot
Comment 2 2015-08-13 10:19:34 PDT
Attachment 258895 [details] did not pass style-queue: ERROR: Source/WTF/wtf/glib/GMainLoopSource.cpp:100: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WTF/wtf/glib/GMainLoopSource.cpp:117: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WTF/wtf/glib/GMainLoopSource.cpp:134: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WTF/wtf/glib/GMainLoopSource.cpp:169: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WTF/wtf/glib/GMainLoopSource.cpp:186: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WTF/wtf/glib/GMainLoopSource.cpp:203: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WTF/wtf/glib/GMainLoopSource.cpp:220: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WTF/wtf/glib/GMainLoopSource.cpp:266: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WTF/wtf/glib/GMainLoopSource.cpp:283: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WTF/wtf/glib/GThreadSafeMainLoopSource.cpp:63: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WTF/wtf/glib/GThreadSafeMainLoopSource.cpp:70: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WTF/wtf/glib/GThreadSafeMainLoopSource.cpp:77: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WTF/wtf/glib/GThreadSafeMainLoopSource.cpp:84: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WTF/wtf/glib/GThreadSafeMainLoopSource.cpp:91: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WTF/wtf/glib/GThreadSafeMainLoopSource.cpp:98: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 15 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Zan Dobersek
Comment 3 2015-08-18 22:52:34 PDT
Comment on attachment 258895 [details] Patch Clearing flags on attachment: 258895 Committed r188633: <http://trac.webkit.org/changeset/188633>
Zan Dobersek
Comment 4 2015-08-18 22:52:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.