Source/WebKit2/NetworkProcess/cache/NetworkCacheIOChannelSoup.cpp
@@ -78,7 +78,7 @@ static inline void runTaskInQueue(std::function<void ()> task, WorkQueue* queue)
     }
 
     // Using nullptr as queue submits the result to the main context.
-    GMainLoopSource::scheduleAndDeleteOnDestroy("[WebKit] IOChannel task", task);
+    GMainLoopSource::scheduleAndDeleteOnDestroy("[WebKit] IOChannel task", WTF::move(task));
 }
 
 static void fillDataFromReadBuffer(SoupBuffer* readBuffer, size_t size, Data& data)
